src/Tasm/g4/TasmParser.java
// Generated from C:/Users/alexd/OneDrive/Ambiente de Trabalho/Compiladores/projeto_parte4/Tasm.g4 by ANTLR 4.13.1
package Tasm.g4;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class TasmParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, LABEL_TO_JUMP=56, LABEL_IDENTIFIER=57, WS=58, 
		WORD=59, INT=60, DOUBLE=61, PONTO=62, LINKEBREAKER=63;
	public static final int
		RULE_start = 0, RULE_intOperators = 1, RULE_intCompare = 2, RULE_intSimpleOperators = 3, 
		RULE_intSimpleOperatorsAdd1 = 4, RULE_intSimpleOperatorsRemove1 = 5, RULE_doubleOperators = 6, 
		RULE_doubleSimpleOperators = 7, RULE_doubleSimpleOperatorsAdd1 = 8, RULE_doubleSimpleOperatorsRemove1 = 9, 
		RULE_doubleCompare = 10, RULE_stringOperators = 11, RULE_stringSimpleOperatorsAdd1 = 12, 
		RULE_stringSimpleOperatorsRemove1 = 13, RULE_stringCompare = 14, RULE_booleanOperators = 15, 
		RULE_booleanSimpleOperators = 16, RULE_booleanSimpleOperatorsAdd1 = 17, 
		RULE_booleanSimpleOperatorsRemove1 = 18, RULE_globalOperators = 19, RULE_jumpOperators = 20, 
		RULE_functionOperators = 21, RULE_endOperator = 22;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "intOperators", "intCompare", "intSimpleOperators", "intSimpleOperatorsAdd1", 
			"intSimpleOperatorsRemove1", "doubleOperators", "doubleSimpleOperators", 
			"doubleSimpleOperatorsAdd1", "doubleSimpleOperatorsRemove1", "doubleCompare", 
			"stringOperators", "stringSimpleOperatorsAdd1", "stringSimpleOperatorsRemove1", 
			"stringCompare", "booleanOperators", "booleanSimpleOperators", "booleanSimpleOperatorsAdd1", 
			"booleanSimpleOperatorsRemove1", "globalOperators", "jumpOperators", 
			"functionOperators", "endOperator"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'ieq'", "'ineq'", "'ilt'", "'ileq'", "'iuminus'", "'iconst'", 
			"'iadd'", "'isub'", "'imult'", "'idiv'", "'imod'", "'itod'", "'itos'", 
			"'iprint'", "'duminus'", "'dconst'", "'dadd'", "'dsub'", "'dmult'", "'ddiv'", 
			"'dprint'", "'dtos'", "'deq'", "'dneq'", "'dlt'", "'dleq'", "'sconst'", 
			"'sadd'", "'sprint'", "'seq'", "'sneq'", "'not'", "'tconst'", "'fconst'", 
			"'bprint'", "'beq'", "'bneq'", "'and'", "'or'", "'btos'", "'galloc'", 
			"'gload'", "'gstore'", "'jump'", "'jumpt'", "'jumpf'", "'lalloc'", "'lstore'", 
			"'-'", "'lload'", "'pop'", "'ret'", "'retval'", "'call'", "'halt'", null, 
			null, null, null, null, null, "'.'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, "LABEL_TO_JUMP", "LABEL_IDENTIFIER", 
			"WS", "WORD", "INT", "DOUBLE", "PONTO", "LINKEBREAKER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Tasm.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TasmParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StartContext extends ParserRuleContext {
		public List<IntOperatorsContext> intOperators() {
			return getRuleContexts(IntOperatorsContext.class);
		}
		public IntOperatorsContext intOperators(int i) {
			return getRuleContext(IntOperatorsContext.class,i);
		}
		public List<DoubleOperatorsContext> doubleOperators() {
			return getRuleContexts(DoubleOperatorsContext.class);
		}
		public DoubleOperatorsContext doubleOperators(int i) {
			return getRuleContext(DoubleOperatorsContext.class,i);
		}
		public List<StringOperatorsContext> stringOperators() {
			return getRuleContexts(StringOperatorsContext.class);
		}
		public StringOperatorsContext stringOperators(int i) {
			return getRuleContext(StringOperatorsContext.class,i);
		}
		public List<BooleanOperatorsContext> booleanOperators() {
			return getRuleContexts(BooleanOperatorsContext.class);
		}
		public BooleanOperatorsContext booleanOperators(int i) {
			return getRuleContext(BooleanOperatorsContext.class,i);
		}
		public List<GlobalOperatorsContext> globalOperators() {
			return getRuleContexts(GlobalOperatorsContext.class);
		}
		public GlobalOperatorsContext globalOperators(int i) {
			return getRuleContext(GlobalOperatorsContext.class,i);
		}
		public List<JumpOperatorsContext> jumpOperators() {
			return getRuleContexts(JumpOperatorsContext.class);
		}
		public JumpOperatorsContext jumpOperators(int i) {
			return getRuleContext(JumpOperatorsContext.class,i);
		}
		public List<FunctionOperatorsContext> functionOperators() {
			return getRuleContexts(FunctionOperatorsContext.class);
		}
		public FunctionOperatorsContext functionOperators(int i) {
			return getRuleContext(FunctionOperatorsContext.class,i);
		}
		public List<EndOperatorContext> endOperator() {
			return getRuleContexts(EndOperatorContext.class);
		}
		public EndOperatorContext endOperator(int i) {
			return getRuleContext(EndOperatorContext.class,i);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TasmListener ) ((TasmListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TasmListener ) ((TasmListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TasmVisitor ) return ((TasmVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 215609832160362494L) != 0)) {
				{
				setState(54);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(46);
					intOperators();
					}
					break;
				case 2:
					{
					setState(47);
					doubleOperators();
					}
					break;
				case 3:
					{
					setState(48);
					stringOperators();
					}
					break;
				case 4:
					{
					setState(49);
					booleanOperators();
					}
					break;
				case 5:
					{
					setState(50);
					globalOperators();
					}
					break;
				case 6:
					{
					setState(51);
					jumpOperators();
					}
					break;
				case 7:
					{
					setState(52);
					functionOperators();
					}
					break;
				case 8:
					{
					setState(53);
					endOperator();
					}
					break;
				}
				}
				setState(58);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IntOperatorsContext extends ParserRuleContext {
		public IntSimpleOperatorsContext intSimpleOperators() {
			return getRuleContext(IntSimpleOperatorsContext.class,0);
		}
		public IntSimpleOperatorsAdd1Context intSimpleOperatorsAdd1() {
			return getRuleContext(IntSimpleOperatorsAdd1Context.class,0);
		}
		public IntSimpleOperatorsRemove1Context intSimpleOperatorsRemove1() {
			return getRuleContext(IntSimpleOperatorsRemove1Context.class,0);
		}
		public IntCompareContext intCompare() {
			return getRuleContext(IntCompareContext.class,0);
		}
		public IntOperatorsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_intOperators; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TasmListener ) ((TasmListener)listener).enterIntOperators(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TasmListener ) ((TasmListener)listener).exitIntOperators(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TasmVisitor ) return ((TasmVisitor<? extends T>)visitor).visitIntOperators(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IntOperatorsContext intOperators() throws RecognitionException {
		IntOperatorsContext _localctx = new IntOperatorsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_intOperators);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(59);
				intSimpleOperators();
				}
				break;
			case 2:
				{
				setState(60);
				intSimpleOperatorsAdd1();
				}
				break;
			case 3:
				{
				setState(61);
				intSimpleOperatorsRemove1();
				}
				break;
			case 4:
				{
				setState(62);
				intCompare();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IntCompareContext extends ParserRuleContext {
		public Token operator;
		public TerminalNode LABEL_IDENTIFIER() { return getToken(TasmParser.LABEL_IDENTIFIER, 0); }
		public IntCompareContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_intCompare; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TasmListener ) ((TasmListener)listener).enterIntCompare(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TasmListener ) ((TasmListener)listener).exitIntCompare(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TasmVisitor ) return ((TasmVisitor<? extends T>)visitor).visitIntCompare(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IntCompareContext intCompare() throws RecognitionException {
		IntCompareContext _localctx = new IntCompareContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_intCompare);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LABEL_IDENTIFIER) {
				{
				setState(65);
				match(LABEL_IDENTIFIER);
				}
			}

			setState(72);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				{
				setState(68);
				((IntCompareContext)_localctx).operator = match(T__0);
				}
				break;
			case T__1:
				{
				setState(69);
				((IntCompareContext)_localctx).operator = match(T__1);
				}
				break;
			case T__2:
				{
				setState(70);
				((IntCompareContext)_localctx).operator = match(T__2);
				}
				break;
			case T__3:
				{
				setState(71);
				((IntCompareContext)_localctx).operator = match(T__3);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IntSimpleOperatorsContext extends ParserRuleContext {
		public Token operator;
		public TerminalNode LABEL_IDENTIFIER() { return getToken(TasmParser.LABEL_IDENTIFIER, 0); }
		public IntSimpleOperatorsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_intSimpleOperators; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TasmListener ) ((TasmListener)listener).enterIntSimpleOperators(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TasmListener ) ((TasmListener)listener).exitIntSimpleOperators(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TasmVisitor ) return ((TasmVisitor<? extends T>)visitor).visitIntSimpleOperators(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IntSimpleOperatorsContext intSimpleOperators() throws RecognitionException {
		IntSimpleOperatorsContext _localctx = new IntSimpleOperatorsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_intSimpleOperators);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LABEL_IDENTIFIER) {
				{
				setState(74);
				match(LABEL_IDENTIFIER);
				}
			}

			setState(77);
			((IntSimpleOperatorsContext)_localctx).operator = match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IntSimpleOperatorsAdd1Context extends ParserRuleContext {
		public Token operator;
		public Token number;
		public TerminalNode INT() { return getToken(TasmParser.INT, 0); }
		public TerminalNode LABEL_IDENTIFIER() { return getToken(TasmParser.LABEL_IDENTIFIER, 0); }
		public IntSimpleOperatorsAdd1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_intSimpleOperatorsAdd1; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TasmListener ) ((TasmListener)listener).enterIntSimpleOperatorsAdd1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TasmListener ) ((TasmListener)listener).exitIntSimpleOperatorsAdd1(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TasmVisitor ) return ((TasmVisitor<? extends T>)visitor).visitIntSimpleOperatorsAdd1(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IntSimpleOperatorsAdd1Context intSimpleOperatorsAdd1() throws RecognitionException {
		IntSimpleOperatorsAdd1Context _localctx = new IntSimpleOperatorsAdd1Context(_ctx, getState());
		enterRule(_localctx, 8, RULE_intSimpleOperatorsAdd1);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LABEL_IDENTIFIER) {
				{
				setState(79);
				match(LABEL_IDENTIFIER);
				}
			}

			setState(82);
			((IntSimpleOperatorsAdd1Context)_localctx).operator = match(T__5);
			setState(83);
			((IntSimpleOperatorsAdd1Context)_localctx).number = match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IntSimpleOperatorsRemove1Context extends ParserRuleContext {
		public Token operator;
		public TerminalNode LABEL_IDENTIFIER() { return getToken(TasmParser.LABEL_IDENTIFIER, 0); }
		public IntSimpleOperatorsRemove1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_intSimpleOperatorsRemove1; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TasmListener ) ((TasmListener)listener).enterIntSimpleOperatorsRemove1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TasmListener ) ((TasmListener)listener).exitIntSimpleOperatorsRemove1(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TasmVisitor ) return ((TasmVisitor<? extends T>)visitor).visitIntSimpleOperatorsRemove1(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IntSimpleOperatorsRemove1Context intSimpleOperatorsRemove1() throws RecognitionException {
		IntSimpleOperatorsRemove1Context _localctx = new IntSimpleOperatorsRemove1Context(_ctx, getState());
		enterRule(_localctx, 10, RULE_intSimpleOperatorsRemove1);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LABEL_IDENTIFIER) {
				{
				setState(85);
				match(LABEL_IDENTIFIER);
				}
			}

			setState(96);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__6:
				{
				setState(88);
				((IntSimpleOperatorsRemove1Context)_localctx).operator = match(T__6);
				}
				break;
			case T__7:
				{
				setState(89);
				((IntSimpleOperatorsRemove1Context)_localctx).operator = match(T__7);
				}
				break;
			case T__8:
				{
				setState(90);
				((IntSimpleOperatorsRemove1Context)_localctx).operator = match(T__8);
				}
				break;
			case T__9:
				{
				setState(91);
				((IntSimpleOperatorsRemove1Context)_localctx).operator = match(T__9);
				}
				break;
			case T__10:
				{
				setState(92);
				((IntSimpleOperatorsRemove1Context)_localctx).operator = match(T__10);
				}
				break;
			case T__11:
				{
				setState(93);
				((IntSimpleOperatorsRemove1Context)_localctx).operator = match(T__11);
				}
				break;
			case T__12:
				{
				setState(94);
				((IntSimpleOperatorsRemove1Context)_localctx).operator = match(T__12);
				}
				break;
			case T__13:
				{
				setState(95);
				((IntSimpleOperatorsRemove1Context)_localctx).operator = match(T__13);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DoubleOperatorsContext extends ParserRuleContext {
		public DoubleSimpleOperatorsContext doubleSimpleOperators() {
			return getRuleContext(DoubleSimpleOperatorsContext.class,0);
		}
		public DoubleSimpleOperatorsAdd1Context doubleSimpleOperatorsAdd1() {
			return getRuleContext(DoubleSimpleOperatorsAdd1Context.class,0);
		}
		public DoubleSimpleOperatorsRemove1Context doubleSimpleOperatorsRemove1() {
			return getRuleContext(DoubleSimpleOperatorsRemove1Context.class,0);
		}
		public DoubleCompareContext doubleCompare() {
			return getRuleContext(DoubleCompareContext.class,0);
		}
		public DoubleOperatorsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_doubleOperators; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TasmListener ) ((TasmListener)listener).enterDoubleOperators(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TasmListener ) ((TasmListener)listener).exitDoubleOperators(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TasmVisitor ) return ((TasmVisitor<? extends T>)visitor).visitDoubleOperators(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DoubleOperatorsContext doubleOperators() throws RecognitionException {
		DoubleOperatorsContext _localctx = new DoubleOperatorsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_doubleOperators);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				{
				setState(98);
				doubleSimpleOperators();
				}
				break;
			case 2:
				{
				setState(99);
				doubleSimpleOperatorsAdd1();
				}
				break;
			case 3:
				{
				setState(100);
				doubleSimpleOperatorsRemove1();
				}
				break;
			case 4:
				{
				setState(101);
				doubleCompare();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DoubleSimpleOperatorsContext extends ParserRuleContext {
		public Token operator;
		public TerminalNode LABEL_IDENTIFIER() { return getToken(TasmParser.LABEL_IDENTIFIER, 0); }
		public DoubleSimpleOperatorsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_doubleSimpleOperators; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TasmListener ) ((TasmListener)listener).enterDoubleSimpleOperators(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TasmListener ) ((TasmListener)listener).exitDoubleSimpleOperators(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TasmVisitor ) return ((TasmVisitor<? extends T>)visitor).visitDoubleSimpleOperators(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DoubleSimpleOperatorsContext doubleSimpleOperators() throws RecognitionException {
		DoubleSimpleOperatorsContext _localctx = new DoubleSimpleOperatorsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_doubleSimpleOperators);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LABEL_IDENTIFIER) {
				{
				setState(104);
				match(LABEL_IDENTIFIER);
				}
			}

			setState(107);
			((DoubleSimpleOperatorsContext)_localctx).operator = match(T__14);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DoubleSimpleOperatorsAdd1Context extends ParserRuleContext {
		public Token operator;
		public Token number;
		public TerminalNode DOUBLE() { return getToken(TasmParser.DOUBLE, 0); }
		public TerminalNode INT() { return getToken(TasmParser.INT, 0); }
		public TerminalNode LABEL_IDENTIFIER() { return getToken(TasmParser.LABEL_IDENTIFIER, 0); }
		public DoubleSimpleOperatorsAdd1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_doubleSimpleOperatorsAdd1; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TasmListener ) ((TasmListener)listener).enterDoubleSimpleOperatorsAdd1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TasmListener ) ((TasmListener)listener).exitDoubleSimpleOperatorsAdd1(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TasmVisitor ) return ((TasmVisitor<? extends T>)visitor).visitDoubleSimpleOperatorsAdd1(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DoubleSimpleOperatorsAdd1Context doubleSimpleOperatorsAdd1() throws RecognitionException {
		DoubleSimpleOperatorsAdd1Context _localctx = new DoubleSimpleOperatorsAdd1Context(_ctx, getState());
		enterRule(_localctx, 16, RULE_doubleSimpleOperatorsAdd1);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LABEL_IDENTIFIER) {
				{
				setState(109);
				match(LABEL_IDENTIFIER);
				}
			}

			setState(112);
			((DoubleSimpleOperatorsAdd1Context)_localctx).operator = match(T__15);
			setState(113);
			((DoubleSimpleOperatorsAdd1Context)_localctx).number = _input.LT(1);
			_la = _input.LA(1);
			if ( !(_la==INT || _la==DOUBLE) ) {
				((DoubleSimpleOperatorsAdd1Context)_localctx).number = (Token)_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DoubleSimpleOperatorsRemove1Context extends ParserRuleContext {
		public Token operator;
		public TerminalNode LABEL_IDENTIFIER() { return getToken(TasmParser.LABEL_IDENTIFIER, 0); }
		public DoubleSimpleOperatorsRemove1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_doubleSimpleOperatorsRemove1; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TasmListener ) ((TasmListener)listener).enterDoubleSimpleOperatorsRemove1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TasmListener ) ((TasmListener)listener).exitDoubleSimpleOperatorsRemove1(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TasmVisitor ) return ((TasmVisitor<? extends T>)visitor).visitDoubleSimpleOperatorsRemove1(this);
			else return visitor.visitChildren(this);
		}
	}

